# VitalVoice-Copilot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/agents/: __init__.py  orchestrator_agent.py  planner_agent.py  rag_agent.py  tool_agent.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py  safety.py  schemas.py
app/memory/: __init__.py  memory_agent.py
app/rag/: __init__.py  index_manager.py
app/scripts/: __init__.py  build_rag_index.py
app/services/: __init__.py  llm_service.py  stt_service.py  tts_service.py
app/tools/: __init__.py  health_tools.py
data/docs/: general_health_guide.txt  symptom_care_notes.txt
docs/: PROJECT_DOCUMENTATION.md
frontend/: index.html
tests/: test_orchestrator.py  test_planner.py  test_tools.py
